[gd_scene load_steps=16 format=3 uid="uid://chtdjj03druvg"]

[ext_resource type="Script" path="res://Scenes/Menus/Level Select.gd" id="1_q4517"]
[ext_resource type="Texture2D" uid="uid://dxjt6pty0dw5r" path="res://Free/Background/Yellow.png" id="1_qmhe0"]
[ext_resource type="Texture2D" uid="uid://wrgs67crjgj" path="res://Free/Menu/Levels/01 .png" id="3_l0hpi"]
[ext_resource type="Texture2D" uid="uid://c3vgk34s2xdtw" path="res://Free/Menu/Levels/02 .png" id="4_fhank"]
[ext_resource type="Texture2D" uid="uid://b6m2wa22ixrkj" path="res://Free/Menu/Levels/03 .png" id="5_73837"]
[ext_resource type="Texture2D" uid="uid://h80r23jhyscr" path="res://Free/Menu/Levels/01 hover.png" id="5_hp3da"]
[ext_resource type="Texture2D" uid="uid://d0oovjmof0mf4" path="res://Free/Menu/Buttons/Back.png" id="6_m32te"]
[ext_resource type="Texture2D" uid="uid://2cemfmj80vhi" path="res://Free/Menu/Levels/02 hover.png" id="7_boimf"]
[ext_resource type="Texture2D" uid="uid://bdqf15jaxsvxd" path="res://Free/Menu/Levels/03 hover.png" id="8_xp0x2"]
[ext_resource type="Theme" uid="uid://cb1g4uqcrxru8" path="res://Scenes/exit.tres" id="10_5w2r7"]

[sub_resource type="LabelSettings" id="LabelSettings_41alo"]
font_size = 50
outline_size = 15
outline_color = Color(0.686275, 0.203922, 0.611765, 1)
shadow_size = 15
shadow_color = Color(0.0862745, 0.027451, 0.0117647, 0.690196)
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ewad"]
bg_color = Color(0.72549, 0, 0.0901961, 1)
border_width_bottom = 5
border_color = Color(0.333333, 0, 0.0196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6w116"]
bg_color = Color(0.72549, 0, 0.0901961, 1)
border_width_bottom = 5
border_color = Color(0.333333, 0, 0.0196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eh1k6"]
bg_color = Color(0.72549, 0, 0.0901961, 1)
border_width_bottom = 6
border_color = Color(0.333333, 0, 0.0196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boe7o"]
bg_color = Color(1, 0.0705882, 0.156863, 1)
border_width_bottom = 10
border_color = Color(0.486275, 0, 0.0470588, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6
shadow_offset = Vector2(4, 4)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("10_5w2r7")
script = ExtResource("1_q4517")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(64, 64)
autoscroll = Vector2(30, 30)
repeat_times = 25

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(558, 342)
texture = ExtResource("1_qmhe0")
flip_h = true

[node name="LevelSelectText" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 317.0
offset_top = 159.0
offset_right = 812.0
offset_bottom = 210.0
text = "Level Select"
label_settings = SubResource("LabelSettings_41alo")

[node name="Control" type="Control" parent="."]
texture_filter = 1
anchors_preset = 0
offset_left = 287.0
offset_top = 342.0
offset_right = 842.0
offset_bottom = 548.0

[node name="LevelOne" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
offset_right = 19.0
offset_bottom = 17.0
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(9.92503, 8.11052)
size_flags_horizontal = 0
texture_normal = ExtResource("3_l0hpi")
texture_pressed = ExtResource("5_hp3da")
texture_hover = ExtResource("5_hp3da")
texture_focused = ExtResource("5_hp3da")

[node name="LevelTwo" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -9.5
offset_right = 9.5
offset_bottom = 17.0
grow_horizontal = 2
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(9.92503, 8.11052)
texture_normal = ExtResource("4_fhank")
texture_pressed = ExtResource("7_boimf")
texture_hover = ExtResource("7_boimf")
texture_focused = ExtResource("7_boimf")

[node name="LevelThree" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -19.0
offset_bottom = 17.0
grow_horizontal = 0
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(9.92503, 8.11052)
texture_normal = ExtResource("5_73837")
texture_pressed = ExtResource("8_xp0x2")
texture_hover = ExtResource("8_xp0x2")
texture_focused = ExtResource("8_xp0x2")

[node name="Back" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.5
offset_top = -71.0
offset_right = 141.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 52
theme_override_styles/focus = SubResource("StyleBoxFlat_6ewad")
theme_override_styles/hover = SubResource("StyleBoxFlat_6w116")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eh1k6")
theme_override_styles/normal = SubResource("StyleBoxFlat_boe7o")
text = "Back"
icon = ExtResource("6_m32te")
expand_icon = true

[connection signal="button_down" from="Control/LevelOne" to="." method="_on_level_one_button_down"]
[connection signal="button_up" from="Control/LevelOne" to="." method="_on_level_one_button_up"]
[connection signal="mouse_entered" from="Control/LevelOne" to="." method="_on_level_one_mouse_entered"]
[connection signal="pressed" from="Control/LevelOne" to="." method="_on_level_one_pressed"]
[connection signal="button_down" from="Control/LevelTwo" to="." method="_on_level_two_button_down"]
[connection signal="button_up" from="Control/LevelTwo" to="." method="_on_level_two_button_up"]
[connection signal="mouse_entered" from="Control/LevelTwo" to="." method="_on_level_two_mouse_entered"]
[connection signal="pressed" from="Control/LevelTwo" to="." method="_on_level_two_pressed"]
[connection signal="button_down" from="Control/LevelThree" to="." method="_on_level_three_button_down"]
[connection signal="button_up" from="Control/LevelThree" to="." method="_on_level_three_button_up"]
[connection signal="mouse_entered" from="Control/LevelThree" to="." method="_on_level_three_mouse_entered"]
[connection signal="pressed" from="Control/LevelThree" to="." method="_on_level_three_pressed"]
[connection signal="mouse_entered" from="Control/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
